Fix Item response
